# recsys-books

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cuda  Dockerfile.ide  Makefile  NOTICE-PAPERS.md  README.md  TUTORIAL_REQUIREMENTS.md  build_recsys_report.mjs  docker-compose.cuda.yml  docker-compose.yml  pyproject.toml  pytest.ini  recommendation_algorithm_sources.md  recsys_v1.artifact.json  recsys_v1.html  requirements.txt
app/: content.py  evidence.py  knowledge_graph.py  main.py  notebook_preview.py  source_browser.py
chapter_code/: __init__.py
config/: code-server-settings.json  model_layers.json  paper_annotations.json  paper_evidence.json  paper_figures.json  reproduction_protocols.json  resources.json
data/: README.md
docs/: MATH_CURRICULUM.md  TUTORIAL_REQUIREMENTS.md  recommendation_algorithm_sources.md
legacy/: build_recsys_report.mjs  legacy_recsys_report.html
notebook_previews/: 3_0_1_data_ml_basics.html  3_0_2_linear_algebra.html  3_0_3_calculus.html  3_0_4_probability_statistics.html  3_0_5_information_theory.html  3_0_6_optimization.html  3_0_7_data_pipeline.html  3_0_data_pipeline.html  3_0_math_foundations.html  3_1_0_classic_foundations.html  3_1_1_collaborative_filtering.html  3_1_2_matrix_factorization.html  3_1_3_factorization_machine.html  3_1_4_gbdt_lr.html  3_1_5_word2vec.html  3_1_math_foundations.html  3_1_summary.html  3_2_0_retrieval_foundations.html  3_2_1_dssm.html  3_2_2_mind.html  3_2_3_sasrec.html  3_2_data_ml_basics.html  3_2_summary.html  3_3_0_ranking_foundations.html  3_3_1_deepfm.html  3_3_2_din.html  3_3_3_dien.html  3_3_linear_algebra.html  3_3_summary.html  3_4_0_multitask_foundations.html  3_4_1_mmoe.html  3_4_2_ple.html  3_4_calculus.html  3_4_summary.html  3_5_0_transformer_foundations.html  3_5_1_sasrec.html  3_5_probability_statistics.html  (+36 more)
(+314 files in other folders)
