[project]
name = "recsys-atlas"
version = "1.1.0"
description = "RecSys Atlas — executable recommender-systems tutorial with local papers and notebooks"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "jinja2==3.1.6",
    "nbformat==5.10.4",
    "nbconvert==7.16.6",
    "jupyterlab==4.4.2",
    "ipywidgets==8.1.7",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "scikit-learn==1.6.1",
    "xgboost==2.1.4",
    "torch==2.6.0",
    "torch-rechub[generative]==0.8.0",
    "httpx==0.28.1",
    "pygments==2.19.1",
    "pypdf==6.10.0",
    "huggingface_hub==1.24.0",
    "pymupdf>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.13",
]

# Application, not a library: uv only manages the environment, never builds this repo.
[tool.uv]
package = false

# The CPU image and local linux dev use the CPU-only PyTorch wheel (PyPI's linux
# wheel bundles CUDA); macOS resolves torch from PyPI as usual. Dockerfile.cuda
# skips this wheel and installs the CUDA-enabled torch build from PyPI instead.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["notebooks", "notebook_previews"]

[tool.ruff.lint]
# 教程质量门禁聚焦会影响执行正确性的诊断：语法错误、非法结构和未定义名称。
# 版式由 Ruff formatter/编辑器负责，不让教学注释因纯风格规则产生噪音。
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "full_data: requires complete externally initialized datasets and validates every official test row",
]
